# CertifiCat

./: .gitignore  .gitlab-ci.helm.yml  .gitlab-ci.yml  README.md  SETTINGS.md  sast-ruleset.toml
src/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/certificat/: app.py  auth.py  constants.py  manage.py  middleware.py  urls.py  utils.py  version.py  wsgi.py
src/certificat/management/commands/: huey_healthcheck.py  initialize_authentication.py
src/certificat/modules/acme/: models.py  pydantic.py  services.py  urls.py  util.py  views.py
src/certificat/modules/acme/backends/: __init__.py  acme.py  certinext.py  local.py  sectigo.py
src/certificat/modules/acme/migrations/: 0001_initial.py  0001_squashed_0010_emsignorderprocessingstate.py  0002_alter_accountbindinggroupscope_unique_together.py  0002_order_identifier.py  0003_remove_order_identifiers_alter_identifier_order_and_more.py  0003_taggedevent.py  0004_certificate_metadata_alter_certificate_order_and_more.py  0004_challenge_validated.py  0005_alter_certificate_metadata.py  0009_config.py  (+15 more)
src/certificat/modules/api/: urls.py  views.py
src/certificat/modules/health/: urls.py  views.py
src/certificat/modules/html/: admin.py  context_processors.py  contextvars.py  forms.py  middleware.py  nav.py  urls.py  views.py
src/certificat/modules/tasks/: __init__.py  beacon.py  finalize_order.py  housekeeping.py  validate_challenge.py
src/certificat/modules/web/: asgi.py  urls.py  views.py
src/certificat/saml/attribute_maps/: django_saml_uri.py
src/certificat/settings/: __init__.py  all.py  auth.py  base.py  cache.py  db.py  dynamic.py  examples.py  huey.py  i18n.py  lazy.py  logging.py  saml.py  webpack.py
src/certificat/tests/: .coveragerc  conftest.py  helpers.py  pytest.ini  seed.py  test_settings.py
src/certificat/tests/acme/: test_auth.py
src/certificat/tests/test_acme/: finalizer_mocks.py  test_acme_finalizer.py  test_auth.py  test_certinext_finalizer.py  test_challenge.py  test_emsign_finalizer.py  test_finalize.py  test_order.py
src/certificat/tests/test_app/: test_accounts.py  test_api.py  test_auth.py  test_housekeeping.py  test_login_hooks.py  test_mountpoints.py  test_remote_auth.py  test_tos.py  test_usage.py
src/certificat/tests/test_scripts/: test_acme_toolkit.py
src/certificat_dev/: config.yml  settings.py  urls.py
src/certificat_dev/saml/: inc-md-cert-mdq.pem  insecure.crt  insecure.key  local-idp.xml  saml-profiles.yaml  simple_saml_auth.php
src/frontend/: bundle-report.html  import-graph.json  package.json  stats.json  tsconfig.json  vite.config.js  webpack.config.js
src/frontend/src/: app.ts  color.ts  easymde.ts  index.ts  util.ts  vendor.ts
src/frontend/src/components/: accountAccessManager.tsx  activityGraph.tsx  confirmButton.tsx  editableText.tsx  fadeOnLoad.tsx  mobileNav.tsx  modal.tsx  newAccountFormManager.tsx  orderHistory.tsx  preAuthorizedIdentifiersManager.tsx  profileMenu.tsx  stickyNav.tsx
src/frontend/src/styles/: _buttons.scss  _forms.scss  _messages.scss  _orderHistory.scss  _pagination.scss  _reset.scss  _spacing.scss  _tables.scss  _tabs.scss  _theme.scss  _typography.scss  common.scss  easymde.scss  heatcalendar.scss  hljs-copy.scss  nav.scss  profile.scss
(+203 files in other folders)
