[project]
name = "certificat"
version = "2025.10.1761582712"
description = "Web site and reference implementation for the acmev2 package"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "acmev2==0.1.1",
    "asn1==3.1.0",
    "django-cotton>=1.3.0",
    "django-webpack-loader==3.2.1",
    "django==5.2.3",
    "djangosaml2==1.10.1",
    "lxml-html-clean>=0.3.1",
    "mysqlclient==2.2.7",
    "pydantic-settings==2.10.1",
    "pyopenssl==25.1.0",
    "pysaml2>=7.5.0",
    "pyyaml>=6.0.2",
    "redis>=5.1.1",
    "markdown>=3.7",
    "huey>=2.5.3",
    "django-import-export>=4.3.7",
]

[tool.uv]
dev-dependencies = [
    "acme>=2.11.0",
    "django-debug-toolbar>=4.4.6",
    "dnsmock>=21.2b2",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "watchdog>=5.0.3",
    "faker>=33.1.0",
    "pytest-cov>=5.0.0",
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["certificat_dev", "frontend"]

[tool.setuptools.package-data]
"certificat" = ["**/*"]
