[project]
name = "certificat"
version = "2.0.0.dev1"
description = "Web site and reference implementation for the acmev2 package"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "asn1>=3.2.0",
    "django-cotton>=2.6.1",
    "django>=6.0.3",
    "djangosaml2>=1.12.0",
    "mysqlclient>=2.2.8",
    "pydantic-settings>=2.13.1",
    "pyopenssl>=26.0.0",
    "pysaml2>=7.5.0",
    "pyyaml>=6.0.2",
    "redis>=5.1.1",
    "markdown>=3.7",
    "huey>=2.5.3",
    "django-import-export>=4.3.7",
    "psycopg[binary]>=3.3.3",
    "acme>=2.11.0",
    "acmev2>=0.2.1",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "dnsmock>=21.2b2",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "watchdog>=5.0.3",
    "faker>=33.1.0",
    "pytest-cov>=5.0.0",
    "pytest-responses>=0.5.1",
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["certificat_dev", "frontend"]

[tool.setuptools.package-data]
"certificat" = ["**/*"]
